--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,6 +84,42 @@ body {
   }
 }
 
+/* ------------------ Header Wrapper -----------     */
+.header-slider {
+  background-color: #e6d1d1;
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.slider {
+  width: 100%;
+  max-width: 1000px;
+  height: 300px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 10px;
+}
+
+.slide-track {
+  display: flex;
+  width: calc(300px * 6); /* 6 images × 300px width */
+  animation: scroll 15s linear infinite;
+}
+
+.slide {
+  width: 300px;
+  height: 300px;
+  flex-shrink: 0;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  background-color: #fff;
+}
+/* ------ media query for slider */
 
 /*------------ Footer ----------*/
 footer {
