--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,92 @@ footer {
   text-align: center;
   padding: 15px;
 }
+
+/* ------------ Main Section -------------- */
+section {
+  padding: 60px 20px;
+  max-width: 900px;
+  margin: auto;
+}
+section h2, section h1 {
+  margin-bottom: 20px;
+}
+
+/* ****** Home Content *******/
+.home-content {
+  text-align: justify;
+  padding: 40px 20px;
+}
+
+.home-content h1 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.home-content p {
+  font-size: 1.1rem;
+  color: #333;
+  max-width: 800px;
+  margin: 20px auto;
+  line-height: 1.6;
+}
+
+/* media query for hoe content */
+@media (max-width: 768px) {
+  .slides img {
+    height: 200px;
+  }
+
+  .home-content h1 {
+    font-size: 1.5rem;
+  }
+
+  .home-content p {
+    font-size: 1rem;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.fade-in {
+  animation: fadeInUp 3s ease forwards;
+}
+
+.delay-1 {
+  animation: fadeInUp 1s ease forwards;
+  animation-delay: 0.4s;
+  opacity: 0;
+}
+
+.delay-2 {
+  animation: fadeInUp 1s ease forwards;
+  animation-delay: 0.8s;
+  opacity: 0;
+}
+
+.delay-3 {
+  animation: fadeInUp 1s ease forwards;
+  animation-delay: 1.1s;
+  opacity: 0;
+}
+
+.delay-4 {
+  animation: fadeInUp 1s ease forwards;
+  animation-delay: 1.6s;
+  opacity: 0;
+}
+.delay-4 a{
+    text-decoration: none;
+}
+.fade-in, .fade-in p {
+  will-change: opacity, transform;
+}
