--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,8 +36,8 @@ body {
 }
 
 .logo-img {
-  height: 40px; 
-  width: 40px;
+  height: 45px; 
+  width: 45px;
   object-fit: contain;
 }
 
@@ -246,13 +246,14 @@ section h2, section h1 {
 
 /* ----------- About Section -------- */
 .about-container {
-  width: 80%;
+  width: 100%;
   max-width: 1100px;
   margin: auto;
 }
 
 .about-container h2 {
   font-size: 2rem;
+  margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -276,7 +277,7 @@ section h2, section h1 {
   font-size: 1.05rem;
   line-height: 1.7;
   margin-bottom: 15px;
-  color: #555;
+  color: #050505;
   text-align: justify;
 }
 
