--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,7 @@ section h2, section h1 {
 .home-content h1 {
   font-size: 2rem;
   margin-bottom: 20px;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -183,7 +184,8 @@ section h2, section h1 {
   }
 
   .home-content h1 {
-    font-size: 1.5rem;
+    font-size: 1rem;
+    font-weight: bold;
   }
 
   .home-content p {
@@ -244,6 +246,7 @@ section h2, section h1 {
 
 .about-container h2 {
   font-size: 2rem;
+  font-weight: bold;
   margin-top: 20px;
   margin-bottom: 20px;
   text-align: center;
@@ -288,6 +291,7 @@ section h2, section h1 {
 .section-title {
   text-align: center;
   font-size: 2rem;
+  font-weight: bold;
   margin:30px 00px;
 }
 
