--- a/assets/css/style1.css
+++ b/assets/css/style1.css
@@ -1,3 +1,51 @@
+/* Calculator page */
+.main-section {
+    padding: 20px; 
+}
+.form-section {
+    background: rgb(191, 224, 238); 
+    padding: 30px; 
+    border-radius: 15px; 
+    max-width: 900px; 
+    margin: auto; 
+}
+.form-section h1{ 
+    text-align: center; 
+}
+.form-section hr{ 
+    height: 5px; 
+    border-radius: 10px; 
+    background-color: #e16868; 
+    border: none; 
+}
+.form-group { 
+    margin: 20px; 
+}
+.radio-option { 
+    margin-right: 20px; 
+    font-size: large; 
+}
+input[type=range] { 
+    width: 100%; 
+    margin: 10px 0; 
+}
+.semester-block, .sgpa-block, .ygpa-block { 
+    margin-top: 20px; 
+    padding: 15px; 
+    background: #d3e8ec;
+    border-radius: 10px; 
+}
+.subject-row { 
+    display: flex; 
+    gap: 10px; 
+    margin-top: 10px; 
+}
+.subject-row input, .subject-row select { 
+    flex: 1; 
+    border-radius: 8px; 
+    padding: 8px; 
+}
+
 /*------------ Understanding ------------------*/
 .understanding-section {
   margin-top: 40px;
